# hw_tuple

./: CMakeLists.txt
include/: meta.hpp  tuple.hpp  tuple.tpp
src/: tuple_unit_tests.cpp
